--- a/src/examples/example.yml
+++ b/src/examples/example.yml
@@ -5,9 +5,19 @@ description: >
 # Comments are not retained.
 usage:
   version: 2.1
+
   orbs:
-    <orb-name>: <namespace>/<orb-name>@1.2.3
+    blue-deploy: rhems-japan/blue-deploy@x.y.z
+
+  jobs:
+    your-job:
+      machine: true
+      steps:
+        - blue-deploy/install
+        - blue-deploy/set-credentials:
+            config-path: ".circleci/deploy/config.yml"
+
   workflows:
-    use-my-orb:
+    your-workflow:
       jobs:
-        - <orb-name>/<job-name>
+        - your-job
