--- a/src/commands/set-credentials.yml
+++ b/src/commands/set-credentials.yml
@@ -31,14 +31,14 @@ steps:
   - run:
       name: set credentials
       command: |
-        aws-access-key-id=$(eval echo << parameters.aws-access-key-id >>)
-        aws-secret-access-key=$(eval echo << parameters.aws-secret-access-key >>)
-        slack-webhook-channel=$(eval echo << parameters.slack-webhook-channel >>)
-        slack-webhook-token=$(eval echo << parameters.slack-webhook-token >>)
-        sed -i -e "s#_AWS_ACCESS_KEY_ID_#${aws-access-key-id}#g"         << parameters.config-path >>
-        sed -i -e "s#_AWS_SECRET_ACCESS_KEY_#${aws-secret-access-key}#g" << parameters.config-path >>
-        sed -i -e "s#_SLACK_DEFAULT_CHANNEL_#${slack-webhook-channel}#g" << parameters.config-path >>
-        sed -i -e "s#_SLACK_DEFAULT_TOKEN_#${slack-webhook-token}#g"     << parameters.config-path >>
+        aws_access_key_id=$(eval echo << parameters.aws-access-key-id >>)
+        aws_secret_access_key=$(eval echo << parameters.aws-secret-access-key >>)
+        slack_webhook_channel=$(eval echo << parameters.slack-webhook-channel >>)
+        slack_webhook_token=$(eval echo << parameters.slack-webhook-token >>)
+        sed -i -e "s#_AWS_ACCESS_KEY_ID_#${aws_access_key_id}#g"         << parameters.config-path >>
+        sed -i -e "s#_AWS_SECRET_ACCESS_KEY_#${aws_secret_access_key}#g" << parameters.config-path >>
+        sed -i -e "s#_SLACK_DEFAULT_CHANNEL_#${slack_webhook_channel}#g" << parameters.config-path >>
+        sed -i -e "s#_SLACK_DEFAULT_TOKEN_#${slack_webhook_token}#g"     << parameters.config-path >>
   - run:
       name: confirm before editing
       command: cat << parameters.config-path >>
