--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,8 @@ jobs:
       - blue-deploy/install
       - blue-deploy/set-credentials:
           config-path: ".circleci/deploy/config.yml"
-
+      - blue-deploy/deploy:
+          config-path: ".circleci/deploy/config.yml"
 workflows:
   # Prior to producing a development orb (which requires credentials) basic validation, linting, and even unit testing can be performed.
   # This workflow will run on every commit
