--- a/src/commands/set-credentials.yml
+++ b/src/commands/set-credentials.yml
@@ -8,20 +8,20 @@ parameters:
     default: "./config.yml"
     description: ""
   aws-access-key-id:
-    type: string
-    default: $AWS_ACCESS_KEY_ID
+    type: env_var_name
+    default: AWS_ACCESS_KEY_ID
     description: ""
   aws-secret-access-key:
-    type: string
-    default: $AWS_SECRET_ACCESS_KEY
+    type: env_var_name
+    default: AWS_SECRET_ACCESS_KEY
     description: ""
   slack-webhook-channel:
-    type: string
-    default: $SLACK_DEFAULT_CHANNEL
+    type: env_var_name
+    default: SLACK_DEFAULT_CHANNEL
     description: ""
   slack-webhook-token:
-    type: string
-    default: $SLACK_DEFAULT_TOKEN
+    type: env_var_name
+    default: SLACK_DEFAULT_TOKEN
     description: ""
 
 steps:
@@ -31,10 +31,10 @@ steps:
   - run:
       name: set credentials
       command: |
-        aws_access_key_id=$(eval echo << parameters.aws-access-key-id >>)
-        aws_secret_access_key=$(eval echo << parameters.aws-secret-access-key >>)
-        slack_webhook_channel=$(eval echo << parameters.slack-webhook-channel >>)
-        slack_webhook_token=$(eval echo << parameters.slack-webhook-token >>)
+        aws_access_key_id=$(eval echo "\$<< parameters.aws-access-key-id >>")
+        aws_secret_access_key=$(eval echo "\$<< parameters.aws-secret-access-key >>")
+        slack_webhook_channel=$(eval echo "\$<< parameters.slack-webhook-channel >>")
+        slack_webhook_token=$(eval echo "\$<< parameters.slack-webhook-token >>")
         sed -i -e "s#_AWS_ACCESS_KEY_ID_#${aws_access_key_id}#g"         << parameters.config-path >>
         sed -i -e "s#_AWS_SECRET_ACCESS_KEY_#${aws_secret_access_key}#g" << parameters.config-path >>
         sed -i -e "s#_SLACK_DEFAULT_CHANNEL_#${slack_webhook_channel}#g" << parameters.config-path >>
