--- a/src/commands/install.yml
+++ b/src/commands/install.yml
@@ -6,3 +6,6 @@ steps:
   - run:
       name: install blue-deploy
       command: curl -L https://dl-deploy.freaker.io/install-deploy.sh | sudo bash
+  - run:
+      name: confirm version
+      command: deploy --version
