--- a/src/commands/set-credentials.yml
+++ b/src/commands/set-credentials.yml
@@ -1,28 +1,28 @@
 description: >
-  This command echos "Hello World" using file inclusion.
+  Set credentials to blue-deploy config file.
 # What will this command do?
 # Descriptions should be short, simple, and clear.
 parameters:
   config-path:
     type: string
     default: "./config.yml"
-    description: ""
+    description: "The path to the blue-deploy config file."
   aws-access-key-id:
     type: env_var_name
     default: AWS_ACCESS_KEY_ID
-    description: ""
+    description: "AWS access key id for IAM role."
   aws-secret-access-key:
     type: env_var_name
     default: AWS_SECRET_ACCESS_KEY
-    description: ""
+    description: "AWS secret key for IAM role."
   slack-webhook-channel:
     type: env_var_name
     default: SLACK_DEFAULT_CHANNEL
-    description: ""
+    description: "Slack channel to send blue-deploy deploy information."
   slack-webhook-token:
     type: env_var_name
     default: SLACK_DEFAULT_TOKEN
-    description: ""
+    description: "Slack token to send blue-deploy deploy information."
 
 steps:
   - run:
