--- a/src/commands/deploy.yml
+++ b/src/commands/deploy.yml
@@ -7,6 +7,9 @@ parameters:
     type: string
     default: "./config.yml"
     description: "The path to the blue-deploy config file."
+  appname:
+    type: string
+    description: "The appname of the deploy target"
   blue-deploy-licence:
     type: env_var_name
     default: BLUE_DEPLOY_LICENCE
@@ -22,4 +25,4 @@ steps:
       command: |
         export BLUE_DEPLOY_LICENCE=$(eval echo "\$<< parameters.blue-deploy-licence >>")
         echo $BLUE_DEPLOY_LICENCE
-        deploy -f << parameters.config-path >>
+        deploy -f << parameters.config-path >> << parameters.appname >>
