--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,7 @@ jobs:
           config-path: ".circleci/deploy/config.yml"
       - blue-deploy/deploy:
           config-path: ".circleci/deploy/config.yml"
+          appname: some-app
 workflows:
   # Prior to producing a development orb (which requires credentials) basic validation, linting, and even unit testing can be performed.
   # This workflow will run on every commit
