--- a/src/commands/blue-deploy.yml
+++ b/src/commands/blue-deploy.yml
@@ -16,7 +16,7 @@ parameters:
     description: "The license of blue-deploy."
 
 steps:
-  - install
+  - install-blue-deploy
   - run:
       name: confirm config.yml
       command: cat << parameters.config-path >>
