--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
       # "greet" is a sample command packaged with this orb config.
       # This sample integration test will run as long as the greet command exists. Once you remove the greet command you should remove this line.
       # Push new changes first, before adding new tests to your config.
-      - blue-deploy/install
+      - blue-deploy/install-blue-deploy
       - blue-deploy/set-credentials:
           config-path: ".circleci/deploy/config.yml"
       # - blue-deploy/deploy:
