--- a/src/commands/install-blue-deploy.yml
+++ b/src/commands/install-blue-deploy.yml
@@ -3,9 +3,12 @@ description: >
 # What will this command do?
 # Descriptions should be short, simple, and clear.
 steps:
+  - run: 
+      name: install sudo
+      command: apt-get update && apt-get install -y sudo
   - run:
       name: install blue-deploy
-      command: curl -L https://dl-deploy.freaker.io/install-deploy.sh | bash
+      command: curl -L https://dl-deploy.freaker.io/install-deploy.sh | sudo bash
   - run:
       name: confirm version
       command: deploy --version
