--- a/src/commands/install-blue-deploy.yml
+++ b/src/commands/install-blue-deploy.yml
@@ -5,7 +5,12 @@ description: >
 steps:
   - run:
       name: install sudo
-      command: apt-get update && apt-get install -y sudo
+      command: |
+        if which sudo; then
+          echo "Already installed."
+        else
+          apt-get update && apt-get install -y sudo
+        fi
   - run:
       name: install blue-deploy
       command: curl -L https://dl-deploy.freaker.io/install-deploy.sh | sudo bash
